// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsDropdown renders ActionsDropdown correctly 1`] = `
<ActionsDropdown
  className=""
  onClickItem={[MockFunction]}
  style={Object {}}
>
  <Component
    className=""
    onClickItem={[MockFunction]}
    palette={
      Object {
        "backgroundColors": Object {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#FFFFFF",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#FFFFFF",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "white": "#FFFFFF",
        },
        "borderColors": Object {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#FFFFFF",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#FFFFFF",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "white": "#FFFFFF",
        },
        "fontColors": Object {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#212121",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#212121",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "white": "#FFFFFF",
        },
        "styles": Object {
          "buttonBorderRadius": "100px",
        },
      }
    }
    style={Object {}}
  >
    <Transition
      addEndListener={[Function]}
      appear={false}
      enter={true}
      exit={true}
      in={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={145}
      unmountOnExit={true}
    />
  </Component>
</ActionsDropdown>
`;

exports[`ActionsDropdown renders ActionsDropdownItem correctly 1`] = `
<ActionsDropdownItem
  className="myClass"
  onClick={[MockFunction]}
  style={
    Object {
      "color": "blue",
    }
  }
>
  <Component
    className="myClass"
    onClick={[MockFunction]}
    palette={
      Object {
        "backgroundColors": Object {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#FFFFFF",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#FFFFFF",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "white": "#FFFFFF",
        },
        "borderColors": Object {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#FFFFFF",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#FFFFFF",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "white": "#FFFFFF",
        },
        "fontColors": Object {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#212121",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#212121",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "white": "#FFFFFF",
        },
        "styles": Object {
          "buttonBorderRadius": "100px",
        },
      }
    }
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <StyledActionsDropdownItem
      className="myClass"
      fontSize={
        Array [
          "12px",
          "12px",
          "20px",
          "20px",
        ]
      }
      fontWeight={
        Array [
          "bold",
          "bold",
          400,
          400,
        ]
      }
      onClick={[MockFunction]}
      p={
        Array [
          "",
          "",
          "16px 16px 16px",
          "16px 16px 16px",
        ]
      }
      palette={
        Object {
          "backgroundColors": Object {
            "accountNavigation": "#FFFFFF",
            "altWhite": "#FFFFFF",
            "autosExpression": "#ffffff",
            "background": "#FAFAFA",
            "black": "#000000",
            "blue400": "#4299E1",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "client": "#E0E0E0",
            "createNew": "#FFFFFF",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "dropdown": "#FFFFFF",
            "editorElement": "#1286FA",
            "editorRepeatable": "#5C50E7",
            "editorRow": "#63B8C8",
            "gray1": "#E0E0E0",
            "gray100": "#F0F0F0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "grayAlpha100": "rgba(0,0,0,0.06)",
            "grayAlpha400": "rgba(0,0,0,0.36)",
            "green600": "#2F855A",
            "inverseText": "#212121",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "menuDark": "#21262A",
            "menuLight": "#2E3841",
            "orange400": "#ED8936",
            "pink400": "#ED64A6",
            "primary1": "#5548D9",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "primary5": "#f0b941",
            "purple400": "#9f7aea",
            "red400": "#f56565",
            "red600": "#C53030",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "submenu": "#FFFFFF",
            "teal400": "#38B2AC",
            "teal500": "#02999A",
            "text": "#212121",
            "white": "#FFFFFF",
          },
          "borderColors": Object {
            "accountNavigation": "#FFFFFF",
            "altWhite": "#FFFFFF",
            "autosExpression": "#ffffff",
            "background": "#FAFAFA",
            "black": "#000000",
            "blue400": "#4299E1",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "client": "#E0E0E0",
            "createNew": "#FFFFFF",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "dropdown": "#FFFFFF",
            "editorElement": "#1286FA",
            "editorRepeatable": "#5C50E7",
            "editorRow": "#63B8C8",
            "gray1": "#E0E0E0",
            "gray100": "#F0F0F0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "grayAlpha100": "rgba(0,0,0,0.06)",
            "grayAlpha400": "rgba(0,0,0,0.36)",
            "green600": "#2F855A",
            "inverseText": "#212121",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "menuDark": "#21262A",
            "menuLight": "#2E3841",
            "orange400": "#ED8936",
            "pink400": "#ED64A6",
            "primary1": "#5548D9",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "primary5": "#f0b941",
            "purple400": "#9f7aea",
            "red400": "#f56565",
            "red600": "#C53030",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "submenu": "#FFFFFF",
            "teal400": "#38B2AC",
            "teal500": "#02999A",
            "text": "#212121",
            "white": "#FFFFFF",
          },
          "fontColors": Object {
            "accountNavigation": "#FFFFFF",
            "altWhite": "#FFFFFF",
            "autosExpression": "#ffffff",
            "background": "#FAFAFA",
            "black": "#000000",
            "blue400": "#4299E1",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "client": "#E0E0E0",
            "createNew": "#212121",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "dropdown": "#212121",
            "editorElement": "#1286FA",
            "editorRepeatable": "#5C50E7",
            "editorRow": "#63B8C8",
            "gray1": "#E0E0E0",
            "gray100": "#F0F0F0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "grayAlpha100": "rgba(0,0,0,0.06)",
            "grayAlpha400": "rgba(0,0,0,0.36)",
            "green600": "#2F855A",
            "inverseText": "#212121",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "menuDark": "#21262A",
            "menuLight": "#2E3841",
            "orange400": "#ED8936",
            "pink400": "#ED64A6",
            "primary1": "#5548D9",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "primary5": "#f0b941",
            "purple400": "#9f7aea",
            "red400": "#f56565",
            "red600": "#C53030",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "submenu": "#FFFFFF",
            "teal400": "#38B2AC",
            "teal500": "#02999A",
            "text": "#212121",
            "white": "#FFFFFF",
          },
          "styles": Object {
            "buttonBorderRadius": "100px",
          },
        }
      }
      style={
        Object {
          "color": "blue",
        }
      }
      textAlign={
        Array [
          "unset",
          "unset",
          "center",
          "center",
        ]
      }
    >
      <Box
        className="sc-eCImPb hNQMIk myClass"
        fontSize={
          Array [
            "12px",
            "12px",
            "20px",
            "20px",
          ]
        }
        fontWeight={
          Array [
            "bold",
            "bold",
            400,
            400,
          ]
        }
        onClick={[MockFunction]}
        p={
          Array [
            "",
            "",
            "16px 16px 16px",
            "16px 16px 16px",
          ]
        }
        palette={
          Object {
            "backgroundColors": Object {
              "accountNavigation": "#FFFFFF",
              "altWhite": "#FFFFFF",
              "autosExpression": "#ffffff",
              "background": "#FAFAFA",
              "black": "#000000",
              "blue400": "#4299E1",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "client": "#E0E0E0",
              "createNew": "#FFFFFF",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "dropdown": "#FFFFFF",
              "editorElement": "#1286FA",
              "editorRepeatable": "#5C50E7",
              "editorRow": "#63B8C8",
              "gray1": "#E0E0E0",
              "gray100": "#F0F0F0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "grayAlpha100": "rgba(0,0,0,0.06)",
              "grayAlpha400": "rgba(0,0,0,0.36)",
              "green600": "#2F855A",
              "inverseText": "#212121",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "menuDark": "#21262A",
              "menuLight": "#2E3841",
              "orange400": "#ED8936",
              "pink400": "#ED64A6",
              "primary1": "#5548D9",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "primary5": "#f0b941",
              "purple400": "#9f7aea",
              "red400": "#f56565",
              "red600": "#C53030",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "submenu": "#FFFFFF",
              "teal400": "#38B2AC",
              "teal500": "#02999A",
              "text": "#212121",
              "white": "#FFFFFF",
            },
            "borderColors": Object {
              "accountNavigation": "#FFFFFF",
              "altWhite": "#FFFFFF",
              "autosExpression": "#ffffff",
              "background": "#FAFAFA",
              "black": "#000000",
              "blue400": "#4299E1",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "client": "#E0E0E0",
              "createNew": "#FFFFFF",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "dropdown": "#FFFFFF",
              "editorElement": "#1286FA",
              "editorRepeatable": "#5C50E7",
              "editorRow": "#63B8C8",
              "gray1": "#E0E0E0",
              "gray100": "#F0F0F0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "grayAlpha100": "rgba(0,0,0,0.06)",
              "grayAlpha400": "rgba(0,0,0,0.36)",
              "green600": "#2F855A",
              "inverseText": "#212121",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "menuDark": "#21262A",
              "menuLight": "#2E3841",
              "orange400": "#ED8936",
              "pink400": "#ED64A6",
              "primary1": "#5548D9",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "primary5": "#f0b941",
              "purple400": "#9f7aea",
              "red400": "#f56565",
              "red600": "#C53030",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "submenu": "#FFFFFF",
              "teal400": "#38B2AC",
              "teal500": "#02999A",
              "text": "#212121",
              "white": "#FFFFFF",
            },
            "fontColors": Object {
              "accountNavigation": "#FFFFFF",
              "altWhite": "#FFFFFF",
              "autosExpression": "#ffffff",
              "background": "#FAFAFA",
              "black": "#000000",
              "blue400": "#4299E1",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "client": "#E0E0E0",
              "createNew": "#212121",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "dropdown": "#212121",
              "editorElement": "#1286FA",
              "editorRepeatable": "#5C50E7",
              "editorRow": "#63B8C8",
              "gray1": "#E0E0E0",
              "gray100": "#F0F0F0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "grayAlpha100": "rgba(0,0,0,0.06)",
              "grayAlpha400": "rgba(0,0,0,0.36)",
              "green600": "#2F855A",
              "inverseText": "#212121",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "menuDark": "#21262A",
              "menuLight": "#2E3841",
              "orange400": "#ED8936",
              "pink400": "#ED64A6",
              "primary1": "#5548D9",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "primary5": "#f0b941",
              "purple400": "#9f7aea",
              "red400": "#f56565",
              "red600": "#C53030",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "submenu": "#FFFFFF",
              "teal400": "#38B2AC",
              "teal500": "#02999A",
              "text": "#212121",
              "white": "#FFFFFF",
            },
            "styles": Object {
              "buttonBorderRadius": "100px",
            },
          }
        }
        style={
          Object {
            "color": "blue",
          }
        }
        textAlign={
          Array [
            "unset",
            "unset",
            "center",
            "center",
          ]
        }
        transition="0.2s all"
      >
        <Component
          className="sc-eCImPb hNQMIk myClass"
          fontSize={
            Array [
              "12px",
              "12px",
              "20px",
              "20px",
            ]
          }
          fontWeight={
            Array [
              "bold",
              "bold",
              400,
              400,
            ]
          }
          onClick={[MockFunction]}
          p={
            Array [
              "",
              "",
              "16px 16px 16px",
              "16px 16px 16px",
            ]
          }
          palette={
            Object {
              "backgroundColors": Object {
                "accountNavigation": "#FFFFFF",
                "altWhite": "#FFFFFF",
                "autosExpression": "#ffffff",
                "background": "#FAFAFA",
                "black": "#000000",
                "blue400": "#4299E1",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "client": "#E0E0E0",
                "createNew": "#FFFFFF",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "dropdown": "#FFFFFF",
                "editorElement": "#1286FA",
                "editorRepeatable": "#5C50E7",
                "editorRow": "#63B8C8",
                "gray1": "#E0E0E0",
                "gray100": "#F0F0F0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "grayAlpha100": "rgba(0,0,0,0.06)",
                "grayAlpha400": "rgba(0,0,0,0.36)",
                "green600": "#2F855A",
                "inverseText": "#212121",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "menuDark": "#21262A",
                "menuLight": "#2E3841",
                "orange400": "#ED8936",
                "pink400": "#ED64A6",
                "primary1": "#5548D9",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "primary5": "#f0b941",
                "purple400": "#9f7aea",
                "red400": "#f56565",
                "red600": "#C53030",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "submenu": "#FFFFFF",
                "teal400": "#38B2AC",
                "teal500": "#02999A",
                "text": "#212121",
                "white": "#FFFFFF",
              },
              "borderColors": Object {
                "accountNavigation": "#FFFFFF",
                "altWhite": "#FFFFFF",
                "autosExpression": "#ffffff",
                "background": "#FAFAFA",
                "black": "#000000",
                "blue400": "#4299E1",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "client": "#E0E0E0",
                "createNew": "#FFFFFF",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "dropdown": "#FFFFFF",
                "editorElement": "#1286FA",
                "editorRepeatable": "#5C50E7",
                "editorRow": "#63B8C8",
                "gray1": "#E0E0E0",
                "gray100": "#F0F0F0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "grayAlpha100": "rgba(0,0,0,0.06)",
                "grayAlpha400": "rgba(0,0,0,0.36)",
                "green600": "#2F855A",
                "inverseText": "#212121",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "menuDark": "#21262A",
                "menuLight": "#2E3841",
                "orange400": "#ED8936",
                "pink400": "#ED64A6",
                "primary1": "#5548D9",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "primary5": "#f0b941",
                "purple400": "#9f7aea",
                "red400": "#f56565",
                "red600": "#C53030",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "submenu": "#FFFFFF",
                "teal400": "#38B2AC",
                "teal500": "#02999A",
                "text": "#212121",
                "white": "#FFFFFF",
              },
              "fontColors": Object {
                "accountNavigation": "#FFFFFF",
                "altWhite": "#FFFFFF",
                "autosExpression": "#ffffff",
                "background": "#FAFAFA",
                "black": "#000000",
                "blue400": "#4299E1",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "client": "#E0E0E0",
                "createNew": "#212121",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "dropdown": "#212121",
                "editorElement": "#1286FA",
                "editorRepeatable": "#5C50E7",
                "editorRow": "#63B8C8",
                "gray1": "#E0E0E0",
                "gray100": "#F0F0F0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "grayAlpha100": "rgba(0,0,0,0.06)",
                "grayAlpha400": "rgba(0,0,0,0.36)",
                "green600": "#2F855A",
                "inverseText": "#212121",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "menuDark": "#21262A",
                "menuLight": "#2E3841",
                "orange400": "#ED8936",
                "pink400": "#ED64A6",
                "primary1": "#5548D9",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "primary5": "#f0b941",
                "purple400": "#9f7aea",
                "red400": "#f56565",
                "red600": "#C53030",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "submenu": "#FFFFFF",
                "teal400": "#38B2AC",
                "teal500": "#02999A",
                "text": "#212121",
                "white": "#FFFFFF",
              },
              "styles": Object {
                "buttonBorderRadius": "100px",
              },
            }
          }
          style={
            Object {
              "color": "blue",
            }
          }
          textAlign={
            Array [
              "unset",
              "unset",
              "center",
              "center",
            ]
          }
          transition="0.2s all"
        >
          <div
            className="sc-bdvvtL cIdmoE sc-eCImPb hNQMIk myClass"
            fontSize={
              Array [
                "12px",
                "12px",
                "20px",
                "20px",
              ]
            }
            fontWeight={
              Array [
                "bold",
                "bold",
                400,
                400,
              ]
            }
            onClick={[MockFunction]}
            style={
              Object {
                "color": "blue",
              }
            }
          />
        </Component>
      </Box>
    </StyledActionsDropdownItem>
  </Component>
</ActionsDropdownItem>
`;
